chore: update greptimedb to 0.8.2, update README, add .gitignore

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
-name: greptimedb
+name: charmed-greptimedb
 base: core22 
-version: '0.8.1' 
+version: '0.8.2' 
 summary: Snapped GreptimeDB, mainly for use in charmed GreptimeDB.
 description: |
     GreptimeDB is an open-source time-series database focusing on efficiency, scalability, and analytical capabilities. It's designed to work on infrastructure of the cloud era, and users benefit from its elasticity and commodity storage.
@@ -9,15 +9,23 @@ website: https://github.com/nvinuesa/charmed-greptimedb-snap
 contact: https://github.com/nvinuesa/charmed-greptimedb-snap/issues/new
 issues: https://github.com/nvinuesa/charmed-greptimedb-snap/issues/new
 
+architectures:
+  - build-on: [amd64]
+    build-for: [amd64]
+  - build-on: [arm64]
+    build-for: [arm64]
 grade: devel 
 confinement: strict
+
+system-usernames:
+  snap_daemon: shared
 
 parts:
   greptime:
     plugin: dump
     source: 
-      - on amd64: https://github.com/greptimeteam/greptimedb/releases/download/v0.8.1/greptime-linux-amd64-v0.8.1.tar.gz
-      - on arm64: https://github.com/greptimeteam/greptimedb/releases/download/v0.8.1/greptime-linux-arm64-v0.8.1.tar.gz
+      - on amd64: https://github.com/greptimeteam/greptimedb/releases/download/v0.8.2/greptime-linux-amd64-v0.8.2.tar.gz
+      - on arm64: https://github.com/greptimeteam/greptimedb/releases/download/v0.8.2/greptime-linux-arm64-v0.8.2.tar.gz
   gtctl:
     plugin: dump
     source: 
